k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logflare-prod
  labels:
    app: logflare-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  minReadySeconds: 30
  selector:
    matchLabels:
      app: logflare-prod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: logflare-prod
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - logflare-prod
              topologyKey: kubernetes.io/hostname
      containers:
        - image: gcr.io/logflare/logflare_app:latest
          imagePullPolicy: Always
          name: logflare
          ports:
            - containerPort: 4000
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
