k8s/prod/headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logflare-prod-headless
spec:
  ports:
    - name: epmd
      port: 4369
  selector:
    app: logflare-prod
  clusterIP: None
